# fastapi-template

./: .dockerignore  .env.example  .env.prod.enc  .env.stg.enc  .gitignore  .pre-commit-config.yaml  .sops.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  compose.dev.yml  compose.local.yml  compose.prod.yml  compose.stg.yml  compose.test.yml  compose.yml  development.md  mise.toml  newrelic.ini  openapi.json  pyproject.toml
.cursor/: rules
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: build-push.yml  cd-dev.yml  cd-prod.yml  cd-stg.yml  cd_build-push.yml  cd_builder.yml  cd_deliverer.yml  cd_deploy-dev.yml  cd_deploy-prod.yml  check-and-build.yml  check_healthy.yml  ci.yml  ci_docker-test.yml  ci_frontend.yml  ci_lint.yml  ci_security.yml  ci_test.yml  ci_type-check.yml  deploy.yml  docker-test.yml  integrated_ci.yml  lint.yml  security.yml  sync-template.yml  sync.yml  test.yml  update-pr-labels.yml
_.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/system/: __init__.py  healthcheck.py
app/api/v1/: __init__.py  items.py  root.py
app/core/: __init__.py  app_factory.py  config.py  exceptions.py  lifespan.py  logging.py  middleware.py  monitoring.py  security.py
app/db/: __init__.py  connection.py  dump.py
app/db/crud/: __init__.py  base.py  item.py
app/db/models/: __init__.py  base.py  item.py
app/db/schemas/: __init__.py  base.py  item.py
app/db/services/: __init__.py
app/domain/: __init__.py
app/domain/exceptions/: base.py
app/infrastructure/: __init__.py
app/infrastructure/batch/: __init__.py  base.py  (+2 more)
app/presentation/: __init__.py
app/utils/: __init__.py  backup_cli.py  redis.py  schemas.py  session.py  session_helper.py  templates.py
bot/: requirements.txt
db/: Dockerfile  Makefile  dump.py  dumper.Dockerfile  migrator.Dockerfile
db/migrations/: env.py
db/package/: connection.py  models.py  session.py
discord/: Dockerfile
docker/: db-tools-entrypoint.sh  db-tools.Dockerfile  migrator.Dockerfile  server.Dockerfile
docker/bot/: Dockerfile
docker/server/: Dockerfile
docs/: api-reference.md  architecture.md  ci-cd-optimization.md  deployment.md  openapi.json  secrets-management.md
docs/archive/: 250530_migrate-to-uv-from-poetry.md
docs/features/: batch-system.md  database-backup.md  error-handling.md  session-management.md
envs/: aws-s3.env.example  db.env.example  server.env.example
front/: package.json  vite.config.ts
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
migrations/: README.md  env.py
nginx/: nginx.conf
nginx/conf.d/: server.conf  server.prod.conf
pgadmin/config/: servers.json
redis/: __init__.py  redis.py  schemas.py  session.py
scripts/: deploy-dev.sh  deploy-prod.sh  setup-server.sh  setup-watchtower.sh
server/: Dockerfile  db  main.py  newrelic.ini  requirements.txt
server/db/: requirements.txt
templates/: generate.py
tests/: README.md  __init__.py  conftest.py  helpers.py
tests/api/: test_healthcheck.py
tests/integration/: conftest.py  test_api.py
tests/unit/: test_security.py  test_session_repository.py
versions/: 20251025_0537-0aa2828fc065_add_sessions_table.py
(+75 files in other folders)
