[project]
name = "fastapi-template"
version = "1.0.0"
description = "A template for creating a new application"
authors = [{ name = "Yuki Watanabe", email = "ukwhatn@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0,<0.116",
    "jinja2>=3.1.2,<4",
    "sqlalchemy>=2.0.32,<3",
    "psycopg2-binary>=2.9.9,<3",
    "pydantic>=2.8.2,<3",
    "pydantic-settings>=2.8.1,<3",
    "cryptography>=44.0.0,<45",
    "sentry-sdk[fastapi]>=2.19.2,<3",
    "newrelic>=10.3.1,<11",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0,<0.12",
    "bandit>=1.7.8,<2",
    "semgrep>=1.63.0,<2",
    "pytest>=8.3.5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
