[project]
name = "fastapi-template"
version = "1.0.0"
description = "A template for creating a new application"
authors = [{ name = "Yuki Watanabe", email = "ukwhatn@gmail.com" }]
requires-python = "==3.13.*"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "jinja2>=3.1.2",
    "sqlalchemy>=2.0.32",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.8.1",
    "cryptography>=46.0.3",
    "sentry-sdk[fastapi]>=2.19.2",
    "newrelic>=11.0.1",
    "apscheduler>=3.10.0,<4.0",
    "opendal>=0.45.0",
    "click>=8.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "bandit>=1.7.8",
    "semgrep>=1.63.0",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
    "pre-commit>=4.3.0",
]

[tool.uv]
package = false

[tool.ruff]
preview = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"

[[tool.mypy.overrides]]
module = [
    "newrelic.*",
    "sentry_sdk.*",
    "bandit.*",
    "semgrep.*",
    "alembic.*",
    "apscheduler.*",
    "opendal.*",
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
